--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body {
   font-size: 15px;
   background-color: hsl(0, 0%, 95%);
   font-family: "Lexend Deca", sans-serif;
+}
+
+main {
+  min-height: inherit;
   display: grid;
   justify-content: center;
   align-content: center;
@@ -56,7 +60,6 @@ button {
 article {
   display: grid;
   grid-template-columns: 1fr;
-  padding: 4.8rem 1rem;
 }
 
 article div {
@@ -104,9 +107,9 @@ article div {
   justify-self: center;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 768px) {
   article {
-    grid-template-columns: repeat(3, 265px);
+    grid-template-columns: repeat(3, 250px);
     padding: 0;
   }
 
@@ -120,5 +123,11 @@ article div {
 
   .attribution {
     justify-self: center;
+  }
+}
+
+@media screen and (max-width:760px){
+  main {
+    padding:4rem 2rem;
   }
 }
